# fast_matrix_market

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.txt  README.Armadillo.md  README.Blaze.md  README.CXSparse.md  README.Eigen.md  README.GraphBLAS.md  README.generator.md  README.md  codecov.yml  run_benchmarks.sh
.github/workflows/: test.yml  tests.yml  wheels.yml
benchmark/: CMakeLists.txt  bench_array.cpp  bench_chunking.cpp  bench_csc.cpp  bench_generator.cpp  bench_iostream.cpp  bench_sequential_triplet.cpp  bench_triplet.cpp  fmm_bench.hpp  main.cpp
benchmark_plots/: plot.ipynb  requirements.txt
cmake/: Blaze.cmake  Dragonbox.cmake  Eigen.cmake  GoogleBenchmark.cmake  GoogleTest.cmake  GraphBLAS.cmake  fast_float.cmake  from_chars_double.cmake  from_chars_tests.cmake  get_version.sh  to_chars_tests.cmake
dependencies/: README.md
dependencies/dragonbox/: CMakeLists.txt
dependencies/fast_float/: CMakeLists.txt
dependencies/fast_float/include/fast_float/: fast_float.h
dependencies/ryu/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  generate_matrix_market.cpp  simple1.cpp  sort_matrix_market.cpp
examples/fast_matrix_market/: dependencies
python/: CMakeLists.txt  README.md  pyproject.toml
python/benchmark/: bench_fmm.py  requirements.txt  run.sh
python/src/fast_matrix_market/: __init__.py  _core.hpp  _core_read_array.cpp  _core_read_coo.cpp  _core_write_csc_32.cpp  _core_write_csc_64.cpp  _fmm_core.cpp  _fmm_core_write_csc_32.cpp  _fmm_core_write_csc_64.cpp  core.cpp  main.cpp  pystreambuf.h
python/tests/: test_array.py  test_basic.py  test_coo.py  test_header.py  test_scipy.py  test_triplet.py
python/tests/matrices/: eye3.mtx  matrix_array_complex_general.mtx  matrix_array_integer_general.mtx  matrix_array_real_general.mtx  matrix_coordinate_complex_general.mtx  matrix_coordinate_integer_general.mtx  matrix_coordinate_pattern_general.mtx  matrix_coordinate_pattern_symmetric.mtx  matrix_coordinate_real_general.mtx  matrix_coordinate_real_general.mtx.bz2  matrix_coordinate_real_skew-symmetric.mtx  matrix_coordinate_real_symmetric.mtx
python/tests/matrices/long_double/: longcomplex_array.mtx  longcomplex_coordinate.mtx  longdouble_array.mtx  longdouble_coordinate.mtx
python/tests/matrices/misc/: windows_newlines.mtx
python/tests/matrices/scipy_crashes/: dim_over_32_bit.mtx  vector_array_real_general.mtx  vector_coordinate_real_general.mtx
python/testsuite_scipy/: test_scipy_suite.py
tests/: CMakeLists.txt  armadillo_test.cpp  array_test.cpp  basic_test.cpp  blaze_test.cpp  chunking_test.cpp  cpp23_test.cpp  csc_test.cpp  cxsparse_test.cpp  disabled_features_test.cpp  driver.cpp  eigen_test.cpp  field_conv_test.cpp  fmm_tests.hpp  graphblas_test.cpp  invalid_test.cpp  no_vector_test.cpp  stdfloat_tests.cmake  triplet_test.cpp  user_type_test.cpp
tests/fake_cxsparse/: cs.hpp
tests/matrices/: 2col_array.mtx  array.mtx  complex.mtx  eye3.mtx  eye3_array.mtx  eye3_complex.mtx  eye3_str.mtx  kepner_gilbert_graph.mtx  nist_ex1.mtx  nist_ex1_freeformat.mtx  nist_ex1_more_freeformat.mtx  row_3by4.mtx  vector.mtx  vector_coordinate_complex.mtx  vector_coordinate_complex_dupes.mtx  vector_coordinate_dupes.mtx
tests/matrices/graphblas/: matrix_bool.mtx  matrix_double.mtx  matrix_double_complex.mtx  matrix_float.mtx  matrix_float_complex.mtx  matrix_int16.mtx  matrix_int32.mtx  matrix_int64.mtx  matrix_int8.mtx  matrix_uint16.mtx  matrix_uint32.mtx  matrix_uint64.mtx  matrix_uint8.mtx
tests/matrices/invalid/: invalid_bad_banner.mtx  invalid_bad_banner_2.mtx  invalid_bad_field.mtx  invalid_bad_format.mtx  invalid_bad_object.mtx  invalid_bad_symmetry.mtx  invalid_bad_value.mtx  invalid_bad_value_2.mtx  invalid_bad_value_3.mtx  invalid_bad_value_4.mtx  invalid_dimensions_out_of_range_1.mtx  invalid_dimensions_out_of_range_2.mtx  invalid_dimensions_out_of_range_3.mtx  invalid_indices_out_of_range_1.mtx  invalid_indices_out_of_range_2.mtx  invalid_indices_out_of_range_3.mtx  invalid_indices_out_of_range_4.mtx  invalid_indices_out_of_range_5.mtx  invalid_indices_out_of_range_6.mtx  invalid_matrix_coord_too_long.mtx  invalid_missing_value_1.mtx  invalid_missing_value_2.mtx  invalid_symmetry_matrix_array.mtx  invalid_symmetry_vector.mtx  invalid_truncated_header_1.mtx  invalid_truncated_header_2.mtx  invalid_truncated_line_1.mtx  invalid_truncated_line_2.mtx  invalid_truncated_lines.mtx  invalid_vector_array_too_long.mtx  invalid_vector_coord_too_long.mtx  invalid_vector_index_out_of_range_1.mtx  invalid_vector_index_out_of_range_2.mtx  invalid_vector_negative_length.mtx
tests/matrices/overflow/: overflow_dim_gt_int64.mtx  overflow_index_gt_int64.mtx  overflow_index_gt_int8.mtx  overflow_value_gt_complex128.mtx  overflow_value_gt_float128.mtx  overflow_value_gt_float64.mtx  overflow_value_gt_int32.mtx  overflow_value_gt_int64.mtx
tests/matrices/permissive/: README.md  permissive_banner_leading_spaces_eye3.mtx  permissive_banner_one_percent_eye3.mtx  permissive_lines_indented.mtx  windows_lineendings_nist_ex1_more_freeformat.mtx
tests/matrices/symmetry/: coordinate_hermitian_real_row.mtx  coordinate_hermitian_real_row_general_dup.mtx  coordinate_hermitian_real_row_general_zero.mtx  coordinate_hermitian_row.mtx  coordinate_hermitian_row_general_dup.mtx  coordinate_hermitian_row_general_zero.mtx  coordinate_pattern_symmetric_row.mtx  coordinate_pattern_symmetric_row_general.mtx  coordinate_pattern_symmetric_row_general_dup.mtx  coordinate_skew_symmetric_row.mtx  coordinate_skew_symmetric_row_general.mtx  coordinate_skew_symmetric_row_general_dup.mtx  coordinate_symmetric_row_general.mtx  hermitian.mtx  hermitian_row_general.mtx  hermitian_row_general_dup.mtx  pattern_symmetric_row_general.mtx  pattern_symmetric_row_general_dup.mtx  skew-symmetric_row_general.mtx  skew-symmetric_row_general_dup.mtx  skew_symmetric.mtx  small_full_symmetric_pattern.mtx
tests/matrices/symmetry_array/: array_hermitian.mtx  array_hermitian_general.mtx  array_skew-symmetric.mtx  array_skew-symmetric_general.mtx  array_symmetric.mtx  array_symmetric_general.mtx
(+31 files in other folders)
