[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "fast_matrix_market"
version = "0.0.1"
description="A fast and full-featured Matrix Market I/O library"
readme = "README.md"
authors = [
    { name = "Adam Lugowski"},
]
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1